--- a/html/juego.html
+++ b/html/juego.html
@@ -265,6 +265,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.12.0/tsparticles.confetti.bundle.min.js"></script>
   <script src="../games/gameData.js"></script>
+  <script src="../games/riddleLevels.js"></script>
+  <script src="../games/storySets.js"></script>
   <script src="../js/stateMachine.js"></script>
   <script src="../games/baseTenBuild.js"></script>
   <script src="../games/baseTenSubtract.js"></script>
