--- a/html/juego.html
+++ b/html/juego.html
@@ -302,192 +302,8 @@
   <script src="../js/juego.js"></script>
   <script type="module" src="../js/game-shell/init.js"></script>
   <script type="module" src="../js/game-shell/tests.js"></script>
-  <script>
-  (function(){
-    const translate = (key, fallback) => (window.i18n?.t ? window.i18n.t(key) : fallback);
-    const t = (key, fallback) => translate(key, fallback);
-      const sectionsData = [
-      {
-        title: t('sectionNewGamesTitle', 'Nouveaux Jeux'), emoji: 0x1F680, color: '#FF8FAB',
-        items: [
-          { label: t('baseTenBuildTitle', 'Construis le nombre'), emoji: 0x1F9F1, aliases: [t('baseTenBuildTitle', 'Construis le nombre')] },
-          { label: t('baseTenSubtractTitle', 'Soustraire, c\'est transformer'), emoji: 0x1F501, aliases: [t('baseTenSubtractTitle', 'Soustraire, c\'est transformer')] }
-        ]
-      },
-      {
-        title: t('sectionMathTitle', 'Mathématiques'), emoji: 0x1F9EE, color: '#4A90E2',
-        items: [
-          { label: t('itemAdditions', 'Additions'), emoji: 0x2795 },
-          { label: t('itemSubtractions', 'Soustractions'), emoji: 0x2796 },
-          { label: t('itemMultiplications', 'Multiplications'), emoji: 0x2716 },
-          { label: t('itemDivisions', 'Divisions'), emoji: 0x2797 },
-          { label: t('itemMathSprint', 'Maths Sprint'), emoji: 0x26A1, aliases: [t('itemMathSprint', 'Maths Sprint')] },
-          { label: t('itemAbacus', 'Abaque Magique'), emoji: 0x1F9EE, aliases: [t('itemAbacus', 'Abaque Magique')] },
-          { label: t('itemNumberHouses', 'Maisons des Nombres'), emoji: 0x1F3E0, aliases: [t('itemNumberHouses', 'Maisons des Nombres')] },
-          { label: t('itemTime', 'Temps & Horloges'), emoji: 0x23F0 },
-          { label: t('itemMeasures', 'Mesures Magiques'), emoji: 0x1F4CF, aliases: [t('itemMeasures', 'Mesures Magiques')] },
-          { label: t('itemFractions', 'Fractions Fantastiques'), emoji: 0x1F355 }
-        ]
-      },
-      {
-        title: t('sectionLogicTitle', 'Logique & Raisonnement'), emoji: 0x1F9E0, color: '#7B2CBF',
-        items: [
-          { label: t('itemLabyrinth', 'Labyrinthe Logique'), emoji: 0x1F9ED },
-          { label: t('itemSequences', 'Jeu des Séquences'), emoji: 0x1F537, aliases: [t('itemSequences', 'Jeu des Séquences')] },
-          { label: t('itemSorting', 'Tri & Classement'), emoji: 0x1F5C2, aliases: [t('itemSorting', 'Tri & Classement'), 'Jeu de Tri'] },
-          { label: t('itemMemory', 'Mémoire Magique'), emoji: 0x1F9E0, aliases: [t('itemMemory', 'Mémoire Magique')] },
-          { label: t('itemSudoku', 'Sudoku Junior'), emoji: 0x1F522 },
-          { label: t('itemSymmetry', 'Symétrie Magique'), emoji: 0x1FA9E },
-          { label: t('itemComparisonCards', 'Cartes Comparatives'), emoji: 0x2696, aliases: [t('itemComparisonCards', 'Cartes Comparatives')] },
-          { label: t('itemPathNetworks', 'Réseaux de Chemins'), emoji: 0x1F517 },
-          { label: t('itemLogicgrams', 'Logigrammes (Si... Alors...)'), emoji: 0x1F9E9, aliases: [t('itemLogicgrams', 'Logigrammes (Si... Alors...)'), 'Logigrammes'] },
-          { label: t('itemRiddles', 'Jeu d\'Énigmes'), emoji: 0x1F4A1},
-          { label: t('itemRepartis', 'Répartis & Multiplie'), emoji: 0x1F34E }
-        ]
-      },
-      {
-        title: t('sectionWordsTitle', 'Mots & Lecture'), emoji: 0x1F4D6, color: '#F5A623',
-        items: [
-          { label: t('itemReading', 'Lecture Magique'), emoji: 0x1F4D8 },
-          { label: t('itemBigAdventure', 'La Grande Aventure des Mots'), emoji: 0x1F524, aliases: [t('itemBigAdventure', 'La Grande Aventure des Mots'), 'Grande Aventure des Mots'] },
-          { label: t('itemToolWords', 'Mots-Outils'), emoji: 0x1F5E3, aliases: [t('itemToolWords', 'Mots-Outils')] },
-          { label: t('itemVowels', 'Jeu des Voyelles'), emoji: 0x1F170, aliases: [t('itemVowels', 'Jeu des Voyelles')] },
-          { label: t('itemWitches', 'Les Sorcières - Jeu de Mémoire Magique'), emoji: 0x1F9D9, aliases: [t('itemWitches', 'Les Sorcières - Jeu de Mémoire Magique'), 'Les Sorcières'] },
-          { label: t('itemDictation', 'Dictée Magique'), emoji: 0x270D },
-        ]
-      },
-      {
-        title: t('sectionCreativeTitle', 'Créatif & Monde'), emoji: 0x1F308, color: '#50E3C2',
-        items: [
-          { label: t('itemColors', 'Les Couleurs / Atelier d\'Art'), emoji: 0x1F3A8, aliases: [t('itemColors', 'Les Couleurs / Atelier d\'Art'), 'Les Couleurs'] },
-          { label: t('itemPuzzle', 'Puzzle Magique'), emoji: 0x1F9E9 },
-          { label: t('itemWorldMap', 'Carte du Monde Interactive'), emoji: 0x1F30D, aliases: [t('itemWorldMap', 'Carte du Monde Interactive'), 'Carte du Monde'] },
-          { label: t('itemNature', 'Découvre la Nature'), emoji: 0x1F333, aliases: [t('itemNature', 'Découvre la Nature')] },
-          { label: t('itemCursive', 'J\'écris en cursive'), emoji: 0x270F },
-          { label: t('itemTales', 'Contes Magiques'), emoji: 0x1F4D6 }
-        ]
-      },
-      {
-        title: t('sectionEmotionsTitle', 'Cœur & Émotions'), emoji: 0x1F496, color: '#F783AC',
-        items: [
-          { label: t('itemEmotions', 'Émotions Magiques'), emoji: 0x1F60A},
-          { label: t('itemDailyMissions', 'Missions du Jour'), emoji: 0x2705 },
-          { label: t('itemDailyQuiz', 'Quiz du Jour'), emoji: 0x1F31E, aliases: [t('itemDailyQuiz', 'Quiz du Jour')] },
-          { label: t('itemBreath', 'Respire & Repose-toi'), emoji: 0x1F9D8},
-          { label: t('itemSelfExpression', 'Expression de Soi / Mon Journal'), emoji: 0x1F4AC }
-        ]
-      }
-    ];
-
-    const normalize = text => (text || '').replace(/\s+/g, ' ').trim();
-
-    function collectSources(){
-      const map = new Map();
-      document.querySelectorAll('#content .topic-btn, #content #logic-games .game-card').forEach(node => {
-        const labelEl = node.querySelector('.topic-btn__text, .title, .game-title');
-        const text = normalize(labelEl ? labelEl.textContent : node.textContent);
-        if (text && !map.has(text)) {
-          map.set(text, node);
-        }
-      });
-      return map;
-    }
-
-    function findSource(item, sources){
-      const aliases = item.aliases || [item.label];
-      for (const alias of aliases){
-        const key = normalize(alias);
-        if (sources.has(key)) return sources.get(key);
-      }
-      return null;
-    }
-
-    function buildSections(){
-      const container = document.getElementById('mm-sections');
-      if (!container) return;
-
-      const sources = collectSources();
-      const hasMenu = sources.size > 0;
-      container.classList.toggle('mm-hide', !hasMenu);
-      if (!hasMenu){
-        container.innerHTML = '';
-        return;
-      }
-
-      document.querySelectorAll('#content .options-grid, #content #logic-games').forEach(el => {
-        if (el.querySelector('.topic-btn, .game-card')) {
-          el.classList.add('mm-hide');
-        }
-      });
-
-      container.innerHTML = '';
-      sectionsData.forEach((section, index) => {
-        const card = document.createElement('article');
-        card.className = 'mm-section-card';
-        card.style.setProperty('--card-index', index);
-        if (section.color) {
-            card.style.setProperty('--section-color', section.color);
-            card.style.setProperty('--section-color-soft', `${section.color}40`);
-        }
-        const header = document.createElement('div'); header.className = 'mm-section-header';
-        const title = document.createElement('h3'); title.className = 'mm-section-title';
-        const emojiSpan = document.createElement('span'); emojiSpan.className = 'mm-emoji';
-        if (section.emoji) {
-          emojiSpan.textContent = typeof section.emoji === 'number' ? String.fromCodePoint(section.emoji) : section.emoji;
-        } else {
-          emojiSpan.textContent = String.fromCodePoint(0x2728);
-        }
-        title.appendChild(emojiSpan);
-        title.appendChild(document.createTextNode(' ' + section.title));
-        header.appendChild(title);
-        card.appendChild(header);
-        const grid = document.createElement('div'); grid.className = 'mm-chip-grid';
-
-        section.items.forEach(item => {
-          const chip = document.createElement('button');
-          chip.type = 'button';
-          chip.className = 'mm-chip';
-          const emojiSpanChip = document.createElement('span'); emojiSpanChip.className = 'mm-emoji';
-          if (item.emoji) {
-            emojiSpanChip.textContent = typeof item.emoji === 'number' ? String.fromCodePoint(item.emoji) : item.emoji;
-          } else {
-            emojiSpanChip.textContent = String.fromCodePoint(0x1F3AF);
-          }
-          chip.appendChild(emojiSpanChip);
-          const labelSpan = document.createElement('span'); labelSpan.textContent = item.label;
-          chip.appendChild(labelSpan);
-
-          const target = findSource(item, sources);
-          if (target){
-            chip.addEventListener('click', () => {
-              if (typeof target.focus === 'function') {
-                target.focus();
-              }
-              target.click();
-            });
-          } else {
-            chip.disabled = true;
-          }
-
-          grid.appendChild(chip);
-        });
-
-        card.appendChild(grid);
-        container.appendChild(card);
-      });
-    }
-
-    const contentEl = document.getElementById('content');
-    if (!contentEl) return;
-
-    const observer = new MutationObserver(() => buildSections());
-    observer.observe(contentEl, { childList: true, subtree: true });
-
-    document.addEventListener('DOMContentLoaded', buildSections);
-    window.addEventListener('load', buildSections);
-    document.addEventListener('lena:language:change', buildSections);
-  })();
-  </script>
+  <script src="../js/new-games/registry.js" defer></script>
+  <script src="../js/new-games/menu.js" defer></script>
 <script>
 (function(){
   const reduceMotion = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)');
