--- a/html/juego.html
+++ b/html/juego.html
@@ -304,6 +304,7 @@
   <script type="module" src="../js/game-shell/tests.js"></script>
   <script src="../js/new-games/registry.js" defer></script>
   <script src="../js/new-games/menu.js" defer></script>
+  <script src="../js/sectionsMenu.js" defer></script>
 <script>
 (function(){
   const reduceMotion = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)');
