--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Appli de Lena</title>
+    <base href="%BASE_URL%" />
     <link rel="manifest" href="%BASE_URL%manifest.json" />
     <link rel="icon" href="%BASE_URL%assets/iconos/icon-32.png" sizes="32x32" />
     <link rel="shortcut icon" href="%BASE_URL%assets/iconos/icon-32.png" />
